@@ -160,117 +160,3 @@ FilterLatex::Print (const wchar_t* token, bool thaiFlag)
   fflush (fpout);
 }
 
-//Normal Characters (tonemarks & vowels ) of both of Windows and Macintosh
-//Not according Position of vowels or tone mark.
-
-// ---------------------
-// 8-bit character codes
-// ---------------------
-static int CharTopMarks[] =
-  {
-    0xe8, 0xe9, 0xea, 0xeb, 0xec, // tone marks & Thanthakhat
-    0x00
-  };
-static int CharAboveMarks[] =
-  {
-    0xd1, 0xd4, 0xd5, 0xd6, 0xd7, // upper vowels
-    0xe7,                         // Maitaikhu
-    0xed,                         // Nikhahit
-    0x00
-  };
-static int CharBelowMarks[] =
-  {
-    0xd8, 0xd9, 0xda,             // below vowels + Phinthu
-    0x00
-  };
-
-// ------------------------
-// 8-bit Glyph sets for Mac
-// ------------------------
-static int MacTopMarksLow[] =
-  {
-    0x88, 0x89, 0x8a, 0x8b, 0x8c, // tone marks & Thanthakhat
-    0x00
-  };
-static int MacTopMarksLowLeft[] =
-  {
-    0x83, 0x84, 0x85, 0x86, 0x87, // tone marks & Thanthakhat
-    0x00
-  };
-static int MacTopMarksLeft[] =
-  {
-    0x98, 0x99, 0x9a, 0x9b, 0x9c, // tone marks & Thanthakhat
-    0x00
-  };
-static int MacAboveMarksLeft[] =
-  {
-    0x92, 0x94, 0x95, 0x96, 0x97, // upper vowels
-    0x93,                         // Maitaikhu
-    0x8f,                         // Nikhahit
-    0x00
-  };
-static int MacBelowMarksLow[] =
-  {
-    0xfc, 0xfd, 0xfe,             // Sara U, Sara Uu, Phinthu
-    0x00
-  };
-
-// 8-bit Glyph sets for Windows (not unicode)
-static int WinTopMarksLow[] =
-  {
-    0x8b, 0x8c, 0x8d, 0x8e, 0x8f, // tone marks & Thanthakhat
-    0x00
-  };
-static int WinTopMarksLowLeft[] =
-  {
-    0x86, 0x87, 0x88, 0x89, 0x8a, // tone marks & Thanthakhat
-    0x00
-  };
-static int WinTopMarksLeft[] =
-  {
-    0x9b, 0x9c, 0x9d, 0x9e, 0x9f, // tone marks & Thanthakhat
-    0x00
-  };
-static int WinAboveMarksLeft[] =
-  {
-    0x98, 0x81, 0x82, 0x83, 0x84, // upper vowels
-    0x9a,                         // Maitaikhu
-    0x99,                         // Nikhahit
-    0x00
-  };
-static int WinBelowMarksLow[] =
-  {
-    0xfc, 0xfd, 0xfe,             // Sara U, Sara Uu, Phinthu
-    0x00
-  };
-
-static int
-idxTopMark (unsigned char ch)
-{
-  for (int i = 0; CharTopMarks[i]; i++)
-    if (CharTopMarks[i] == ch)
-      return i;
-
-  return -1;
-}
-
-static int
-idxAboveMark (unsigned char ch)
-{
-  for (int i = 0; CharAboveMarks[i]; i++)
-    if (CharAboveMarks[i] == ch)
-      return i;
-
-  return -1;
-}
-
-static int
-idxBelowMark (unsigned char ch)
-{
-  for (int i = 0; CharBelowMarks[i]; i++)
-    if (CharBelowMarks[i] == ch)
-      return i;
-
-  return -1;
-}
-
